--- a/index.html
+++ b/index.html
@@ -178,8 +178,12 @@
         </li>
         <!--/. Side navigation links -->
       </ul>
-    </div>
-    <!--/. Sidebar navigation -->
+
+      <!-- Mask -->
+      <div class="sidenav-bg mask-strong"></div>
+
+      </div>
+      <!--/. Sidebar navigation -->
 
   </header>
   <!--Main Navigation-->
@@ -231,134 +235,118 @@
       <!--Section: Main panel-->
       <section class="card card-cascade narrower mb-5">
 
-        <!--Grid row-->
-        <div class="row">
+          <!--Grid row-->
+          <div class="row">
 
-          <!--Grid column-->
-          <div class="col-md-7">
+              <!--Grid column-->
+              <div class="col-md-5">
 
-            <!--Panel Header-->
-            <div class="view py-3 gradient-card-header info-color-dark mb-4">
-
-              <canvas id="lineChart"></canvas>
-
-            </div>
-            <!--/Card image-->
-
-          </div>
-          <!--Grid column-->
-          <div class="col-md-5">
-
-            <!--Panel Header-->
-            <div class="view py-3 gradient-card-header info-color-dark">
-              <h5 class="mb-0">Sales</h5>
-            </div>
-            <!--/Panel Header-->
-
-            <!--Panel content-->
-            <div class="card-body">
-
-              <!--Grid row-->
-              <div class="row">
-
-                <!--Grid column-->
-                <div class="col-md-6 mb-4">
-
-                  <!--Date select-->
-                  <p class="lead">
-                    <span class="badge info-color-dark p-2">Date range</span>
-                  </p>
-                  <select class="mdb-select colorful-select dropdown-info">
-                    <option value="" disabled selected>Choose time period</option>
-                    <option value="1">Today</option>
-                    <option value="2">Yesterday</option>
-                    <option value="3">Last 7 days</option>
-                    <option value="3">Last 30 days</option>
-                    <option value="3">Last week</option>
-                    <option value="3">Last month</option>
-                </select>
-
-                  <!--Date pickers-->
-                  <p class="lead my-4">
-                    <span class="badge info-color-dark p-2">Custom date</span>
-                  </p>
-                  <div class="md-form">
-                    <input placeholder="Selected date" type="text" id="from" class="form-control datepicker">
-                    <label for="date-picker-example">From</label>
+                  <!--Panel Header-->
+                  <div class="view view-cascade py-3 gradient-card-header info-color-dark">
+                    <h5 class="mb-0">Sales</h5>
                   </div>
-                  <div class="md-form">
-                    <input placeholder="Selected date" type="text" id="to" class="form-control datepicker">
-                    <label for="date-picker-example">To</label>
+                  <!--/Panel Header-->
+
+                  <!--Panel content-->
+                  <div class="card-body">
+
+                      <!--Grid row-->
+                      <div class="row">
+
+                          <!--Grid column-->
+                          <div class="col-md-6 mb-4">
+
+                              <!--Date select-->
+                              <p class="lead">
+                                  <span class="badge info-color-dark p-2">Date range</span>
+                              </p>
+                              <select class="mdb-select colorful-select dropdown-info">
+                                  <option value="" disabled selected>Choose time period</option>
+                                  <option value="1">Today</option>
+                                  <option value="2">Yesterday</option>
+                                  <option value="3">Last 7 days</option>
+                                  <option value="3">Last 30 days</option>
+                                  <option value="3">Last week</option>
+                                  <option value="3">Last month</option>
+                              </select>
+
+                              <!--Date pickers-->
+                              <p class="lead my-4">
+                                  <span class="badge info-color-dark p-2">Custom date</span>
+                              </p>
+                              <div class="md-form">
+                                  <input placeholder="Selected date" type="text" id="from" class="form-control datepicker">
+                                  <label for="date-picker-example">From</label>
+                              </div>
+                              <div class="md-form">
+                                  <input placeholder="Selected date" type="text" id="to" class="form-control datepicker">
+                                  <label for="date-picker-example">To</label>
+                              </div>
+
+                          </div>
+                          <!--Grid column-->
+
+                          <!--Grid column-->
+                          <div class="col-md-6 mb-4 text-center">
+
+                              <!--Summary-->
+                              <p>Total sales:
+                                  <strong>2000$</strong>
+                                  <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Total sales in the given period">
+                                      <i class="fa fa-question"></i>
+                                  </button>
+                              </p>
+                              <p>Average sales:
+                                  <strong>100$</strong>
+                                  <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Average daily sales in the given period">
+                                      <i class="fa fa-question"></i>
+                                  </button>
+                              </p>
+
+                              <!--Change chart-->
+                              <span class="min-chart my-4" id="chart-sales" data-percent="76">
+                                  <span class="percent"></span>
+                              </span>
+                              <h5>
+                                  <span class="badge green p-2">Change
+                                      <i class="fa fa-arrow-circle-up ml-1"></i>
+                                  </span>
+                                  <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Percentage change compared to the same period in the past">
+                                      <i class="fa fa-question"></i>
+                                  </button>
+                              </h5>
+
+                          </div>
+                          <!--Grid column-->
+
+                      </div>
+                      <!--Grid row-->
+
                   </div>
-
-                </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
-                <div class="col-md-6 mb-4 text-center">
-
-                  <!--Summary-->
-                  <p>Total sales:
-                    <strong>2000$</strong>
-                    <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Total sales in the given period">
-                      <i class="fa fa-question"></i>
-                    </button>
-                  </p>
-                  <p>Average sales:
-                    <strong>100$</strong>
-                    <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Average daily sales in the given period">
-                      <i class="fa fa-question"></i>
-                    </button>
-                  </p>
-
-                  <!--Change chart-->
-                  <span class="min-chart my-4" id="chart-sales" data-percent="76">
-                    <span class="percent"></span>
-                  </span>
-                  <h5>
-                    <span class="badge green p-2">Change
-                      <i class="fa fa-arrow-circle-up ml-1"></i>
-                    </span>
-                    <button type="button" class="btn btn-info btn-sm p-2" data-toggle="tooltip" data-placement="top" title="Percentage change compared to the same period in the past">
-                      <i class="fa fa-question"></i>
-                    </button>
-                </h5>
-
-                </div>
-                <!--Grid column-->
+                  <!--Panel content-->
 
               </div>
-              <!--Grid row-->
+              <!--Grid column-->
 
-            </div>
-            <!--Panel content-->
+              <!--Grid column-->
+              <div class="col-md-7">
+
+                  <!--Panel Header-->
+                  <div class="view py-3 gradient-card-header info-color-dark mb-4">
+
+                      <canvas id="lineChart"></canvas>
+
+                  </div>
+                  <!--/Card image-->
+
+              </div>
+              <!--Grid column-->
 
           </div>
-          <!--Grid column-->
+          <!--Grid row-->
 
-
-        </div>
-        <!--Grid row-->
-
-    </div>
-    <!--Panel content-->
-
-    </div>
-    <!--Grid column-->
-
-    <!--Grid column-->
-    <div class="col-md-7">
-
-
-
-    </div>
-    <!--Grid column-->
-
-    </div>
-    <!--Grid row-->
-
-    </section>
-    <!--Section: Main panel-->
+      </section>
+      <!--Section: Main panel-->
 
     <!--Section: Table-->
     <section class="mb-5">
@@ -855,23 +843,23 @@
     });
   </script>
   <!-- Alerts -->
-<script>
-    $(function () {
-        $('#folder-1').click(function () {
-            toastr.error("Folder 1 has been clicked!", "Folder 1", {
-               "positionClass": "toast-top-right",
-            });
+  <script>
+    $(function() {
+      $('#folder-1').click(function() {
+        toastr.error("Folder 1 has been clicked!", "Folder 1", {
+          "positionClass": "toast-top-right",
         });
-        $('#folder-2').click(function () {
-            // make it not dissappear
-            toastr.info("Folder 2 has been clicked!", "Folder 2", );
-        });
-        $('#folder-3').click(function () {
-            // make it not dissappear
-            toastr.info("Folder 3 has been clicked!", "Folder 3", );
-        });
+      });
+      $('#folder-2').click(function() {
+        // make it not dissappear
+        toastr.info("Folder 2 has been clicked!", "Folder 2", );
+      });
+      $('#folder-3').click(function() {
+        // make it not dissappear
+        toastr.info("Folder 3 has been clicked!", "Folder 3", );
+      });
     });
-</script>
+  </script>
 
 </body>
 
